--- a/FLX_homework_4/homework/index.html
+++ b/FLX_homework_4/homework/index.html
@@ -12,7 +12,7 @@
 
 <body>
  
-  <div class="main-wrapper">
+  <div class="main-part">
     <header>
       <div class="promo">
         <div class="logo-small">Lorem & Ipsum</div>
@@ -52,7 +52,7 @@
               174 &hearts;
             </div>
           </div>
-          <div class="description">
+          <div class="lorem">
             <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Labore aut ipsa dicta dolorem a quibusdam eum
               quasi vel nobis dolores dolore tempora, ex, assumenda quam veritatis, iure optio soluta sequi?
             </h4>
@@ -136,10 +136,10 @@
           </form>
         </div>
       </div>
-      <div class="end-wrapper">
-        <div class="end">
-          <span class="footer-wrapper2"> &copy; 2019 Epam</span>
-          <p class="menu2">
+      <div class="wrapper-end">
+        <div class="endfoter">
+          <span class="footer-wrappertwo"> &copy; 2019 Epam</span>
+          <p class="menufot">
             <a href="#">Home</a>
             <a href="#about">About</a>
             <a href="#shop">Shop</a>
